# LCRS

./: .gitignore  CMakeLists.txt  Makefile  README.md  addrList.h  client.cpp  conf.h  config.json  connect.h  init.conf  mConfig.h  main.cpp  network.h  node.cpp  server.cpp  server.h  sys.h  to_do.txt
etc/: lcrs.config
include/: .SysId.h.swp  AddrBook.h  Configure.h  Connect.h  File.h  FileInfo.h  MetaInfo.h  N_addr.h  Network.h  Packet.h  PacketHeader.h  Protocol.h  Storage.h  Sys.h  SysId.h
lcrs/: CMakeLists.txt
lcrs/CMake/: lcrsConfig.cmake.in  spdlog.cmake
lcrs/cmake/: boost.cmake  gtest.cmake  spdlog.cmake
lcrs/include/: Log.h  Network.h  Protocol.h  Storage.h  lcrs.h  lcrsJsonReader.h  lcrsNetwork.h
lcrs/include/include/: FileInfo.h  Packet.h
lcrs/include/lcrs/: lcrs.h  logger.h  system.h
lcrs/include/lcrs/test/: test.h
lcrs/src/: Protocol.cpp  client.cpp  lcrs.cpp  lcrsJsonReader.cpp  lcrsTest.cpp  logger.cpp  server.cpp  system.cpp  test.cpp
lcrs/src/src/: Configure.cpp  Connect.cpp  Packet.cpp  PacketHeader.cpp
lcrs/src/test/: test.cpp
lcrsApp/: CMakeLists.txt  main.cpp
oldLcrs/: main.cpp
oldLcrs/etc/: lcrs.config
oldLcrs/include/: SysId.h  lcrs.h
oldLcrs/src/: File.cpp  MetaInfo.cpp  lcrsNetwork.cpp
src/: .Network.cpp.swp  AddrBook.cpp  Configure.cpp  Connect.cpp  File.cpp  FileInfo.cpp  Log.cpp  MetaInfo.cpp  N_addr.cpp  Network.cpp  Packet.cpp  PacketHeader.cpp  Protocol.cpp  Storage.cpp  Sys.cpp  SysId.cpp
